--- a/说明/文档维护指南.md
+++ b/说明/文档维护指南.md
@@ -58,10 +58,14 @@ i18n: {
    直接编辑 `i18n/zh-Hans/...` 目录下的 Markdown 文件，将其内容翻译为目标语言。
 
 ### 2.3 预览特定语言
-要预览特定语言（例如中文 `zh-Hans`）的版本，请运行：
+本项目的开发服务器一次只会启动一个 locale（默认是 `zh-Hans`）。因此在开发模式下直接访问 `http://localhost:3000/en/...` 这类路径会出现 404，这是预期行为。
+
+要预览特定语言（例如英文 `en`、中文 `zh-Hans`）的版本，请运行对应命令：
 
 ```bash
-npm run start -- --locale zh-Hans
+npm run start:en
+# 或
+npm run start:zh
 ```
 
 ### 2.4 构建多语言版本
@@ -75,11 +79,19 @@ npm run build
 - 默认语言在根路径。
 - 其他语言在对应的子路径下（例如 `build/zh-Hans/`）。
 
+如果你希望在本地同时验证 `/en/...`、`/ja/...` 等多语言路径，请使用生产模式预览：
+
+```bash
+npm run preview
+```
+
 ## 3. 常用命令速查
 
 | 任务 | 命令 |
 |------|------|
 | 启动开发服务器 (默认语言) | `npm run start` |
-| 启动开发服务器 (中文) | `npm run start -- --locale zh-Hans` |
+| 启动开发服务器 (中文) | `npm run start:zh` |
+| 启动开发服务器 (英文) | `npm run start:en` |
 | 构建所有语言版本 | `npm run build` |
+| 构建并本地预览 (支持所有语言路径) | `npm run preview` |
 | 提取待翻译的 JSON 字符串 | `npm run write-translations` |
