--- a/i18n/ja/docusaurus-theme-classic/navbar.json
+++ b/i18n/ja/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "EZS ドキュメント",
+    "message": "EZS ドキュメンテーション",
     "description": "The title in the navbar"
   },
   "logo.alt": {
