--- a/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "EZS 文档",
+    "message": "硅基之下(UnderSilicon) 文档",
     "description": "The title in the navbar"
   },
   "logo.alt": {
