--- a/i18n/de/docusaurus-theme-classic/navbar.json
+++ b/i18n/de/docusaurus-theme-classic/navbar.json
@@ -4,7 +4,7 @@
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "EZS-Dokumentation-Logo",
+    "message": "EZS-Dokumentationslogo",
     "description": "The alt text of navbar logo"
   },
   "item.label.文档": {
