--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -59,13 +59,13 @@
     "message": "Cambiar entre modo oscuro y claro (actualmente {mode})",
     "description": "The ARIA label for the color mode toggle"
   },
-  "theme.docs.breadcrumbs.navAriaLabel": {
-    "message": "Rastro de navegación",
-    "description": "The ARIA label for the breadcrumbs"
-  },
   "theme.docs.DocCard.categoryDescription.plurals": {
     "message": "1 artículo|{count} artículos",
     "description": "The default description for a category card in the generated index about how many items this category includes"
+  },
+  "theme.docs.breadcrumbs.navAriaLabel": {
+    "message": "Rastro de navegación",
+    "description": "The ARIA label for the breadcrumbs"
   },
   "theme.docs.paginator.navAriaLabel": {
     "message": "Página del documento",
@@ -87,6 +87,9 @@
     "message": "{nDocsTagged} con \"{tagName}\"",
     "description": "The title of the page for a docs tag"
   },
+  "theme.docs.versionBadge.label": {
+    "message": "Versión: {versionLabel}"
+  },
   "theme.docs.versions.unreleasedVersionLabel": {
     "message": "Esta es la documentación sin publicar para {siteTitle}, versión {versionLabel}.",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
@@ -102,9 +105,6 @@
   "theme.docs.versions.latestVersionLinkLabel": {
     "message": "última versión",
     "description": "The label used for the latest version suggestion link label"
-  },
-  "theme.docs.versionBadge.label": {
-    "message": "Versión: {versionLabel}"
   },
   "theme.common.editThisPage": {
     "message": "Editar esta página",
@@ -194,17 +194,13 @@
     "message": "Comuníquese con el dueño del sitio que le proporcionó la URL original y hágale saber que su vínculo está roto.",
     "description": "The 2nd paragraph of the 404 page"
   },
-  "theme.navbar.mobileLanguageDropdown.label": {
-    "message": "Idiomas",
-    "description": "The label for the mobile language switcher dropdown"
-  },
   "theme.TOCCollapsible.toggleButtonLabel": {
     "message": "En esta página",
     "description": "The label used by the button on the collapsible TOC component"
   },
-  "theme.blog.post.readingTime.plurals": {
-    "message": "Lectura de un minuto|{readingTime} min de lectura",
-    "description": "Pluralized label for \"{readingTime} min read\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
+  "theme.navbar.mobileLanguageDropdown.label": {
+    "message": "Idiomas",
+    "description": "The label for the mobile language switcher dropdown"
   },
   "theme.blog.post.readMore": {
     "message": "Leer Más",
@@ -213,6 +209,10 @@
   "theme.blog.post.readMoreLabel": {
     "message": "Leer más acerca de {title}",
     "description": "The ARIA label for the link to full blog posts from excerpts"
+  },
+  "theme.blog.post.readingTime.plurals": {
+    "message": "Lectura de un minuto|{readingTime} min de lectura",
+    "description": "Pluralized label for \"{readingTime} min read\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.CodeBlock.copy": {
     "message": "Copiar",
@@ -250,13 +250,13 @@
     "message": "Cerrar barra de lateral",
     "description": "The ARIA label for close button of mobile sidebar"
   },
-  "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
-    "message": "Alternar barra lateral",
-    "description": "The ARIA label for hamburger menu button of mobile navigation"
-  },
   "theme.navbar.mobileSidebarSecondaryMenu.backButtonLabel": {
     "message": "← Volver al menú principal",
     "description": "The label of the back button to return to main menu, inside the mobile navbar sidebar secondary menu (notably used to display the docs sidebar)"
+  },
+  "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
+    "message": "Alternar barra lateral",
+    "description": "The ARIA label for hamburger menu button of mobile navigation"
   },
   "theme.navbar.mobileDropdown.collapseButton.expandAriaLabel": {
     "message": "Expandir el menú desplegable",
@@ -325,5 +325,59 @@
   "theme.tags.tagsPageTitle": {
     "message": "Etiquetas",
     "description": "The title of the tag list page"
+  },
+  "homepage.visitDocs": {
+    "message": "Ver Documentación"
+  },
+  "homepage.title": {
+    "message": "Bienvenido a {title}"
+  },
+  "homepage.description": {
+    "message": "Sitio de Documentación EZS"
+  },
+  "易于使用": {
+    "message": "Fácil de Usar"
+  },
+  "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
+    "message": "Docusaurus se diseñó desde el principio para ser fácil de instalar y usar, lo que permite que tu sitio web esté en funcionamiento rápidamente."
+  },
+  "专注于核心内容": {
+    "message": "Enfocado en el Contenido Central"
+  },
+  "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
+    "message": "Docusaurus te permite concentrarte en la documentación misma; nosotros nos encargamos del trabajo tedioso. Solo tienes que colocar tus documentos en el directorio {docs}."
+  },
+  "基于 React 构建": {
+    "message": "Construido con React"
+  },
+  "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
+    "message": "Extiende o personaliza el diseño de tu sitio web reutilizando React. Docusaurus puede extenderse mientras se reutilizan el encabezado y el pie de página."
+  },
+  "homepage.downloadClient": {
+    "message": "Descargar cliente"
+  },
+  "硬件生态与连接": {
+    "message": "Ecosistema de Hardware y Conectividad"
+  },
+  "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
+    "message": "Compatible con una variedad de dispositivos inteligentes (motores, vibradores, estimuladores de pulso, etc.). Configuración de WiFi ultrarrápida, conexión estable y uso sencillo."
+  },
+  "无限创意玩法": {
+    "message": "Modo de juego de creatividad infinita"
+  },
+  "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
+    "message": "Contiene varios modos de interacción divertidos como detección de flexiones, preguntas de choque eléctrico y entrenamiento de retención, lo que hace que el control sea más entretenido."
+  },
+  "全平台控制": {
+    "message": "Control Total de Plataforma"
+  },
+  "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
+    "message": "Ofrece un potente soporte en cliente de escritorio y aplicaciones móviles (App/mini-programas), permitiendo controlar el estado del equipo en cualquier momento y lugar."
+  },
+  "开放开发生态": {
+    "message": "Ecosistema de desarrollo abierto"
+  },
+  "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
+    "message": "Proporciona una interfaz de control en Python con código abierto, permitiendo a los desarrolladores personalizar y ampliar sus funciones para construir juntos una experiencia de juguete inteligente."
   }
 }
